# harbour-shutter

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  clickable.yaml  harbour-pinhole.desktop  harbour-pinhole.pro  harbour-shutter.desktop  harbour-shutter.pro  icons.qrc  pinhole.qrc  shutter.qrc  shutter.qrc.in  uk.co.piggz.shutter.desktop
click/: harbour-shutter-ui.desktop  harbour-shutter.apparmor  manifest.json.in
debian/: build.sh  changelog  control  harbour-pinhole.install  harbour-pinhole.postinst  install.sh  rules  vars
libs/libcamera/: build_libcamera_ubuntu_focal.sh
qml/: harbour-pinhole.qml  harbour-shutter.qml
qml/components/: ControlSlider.qml  DockedControlListView.qml  DockedListView.qml  IconSwitch.qml  RoundButton.qml
qml/components/platform.kirigami/: ApplicationWindowPL.qml  ComboBoxPL.qml  DockedPanelPL.qml  ListItemPL.qml  PagePL.qml  SliderPL.qml  SlideshowPL.qml  StackPL.qml  TextSwitchPL.qml
qml/components/platform.kirigami/ut/: ApplicationWindowPL.qml  ComboBoxPL.qml
qml/components/platform.qtcontrols/: DockedPanelPL.qml  IconButtonPL.qml
qml/components/platform.silica/: ApplicationWindowPL.qml  Cover.qml  DockedPanelPL.qml  ListViewPL.qml  PagePL.qml  SlideshowPL.qml  StylerPL.qml
qml/pages/: AboutImage.qml  AboutVideo.qml  CameraUI.qml  GalleryUI.qml  GridOverlay.qml  SettingsOverlay.qml  SettingsX.qml  VideoPlayer.qml
rpm/: harbour-pinhole.spec  harbour-shutter.spec
src/: .deviceinfo.cpp.kate-swp  CMakeLists.txt  cameramodel.cpp  cameramodel.h  cameraproxy.cpp  cameraproxy.h  controlmodel.cpp  controlmodel.h  effectsmodel.cpp  effectsmodel.h  encoder_jpeg.cpp  encoder_jpeg.h  exifmodel.cpp  exifmodel.h  exposuremodel.cpp  exposuremodel.h  facedetection.cpp  facedetection.h  flashmodel.cpp  flashmodel.h  focusmodel.cpp  focusmodel.h  format_converter.cpp  formatmodel.cpp  formatmodel.h  fsoperations.cpp  fsoperations.h  harbour-pinhole.cpp  harbour-shutter.cpp  isomodel.cpp  isomodel.h  metadatamodel.cpp  metadatamodel.h  openglviewfinderrendernode.cpp  openglviewfinderrendernode.h  resolutionmodel.cpp  resolutionmodel.h  resourcehandler.cpp  resourcehandler.h  settings.cpp  (+16 more)
src/assets/shaders/: RGB.frag  YUV_packed.frag  YUYV.frag  id.vert  identity.vert  test.frag  test.vert
src/libcamera/: encoder_libjpeg.cpp  encoder_libjpeg.h  exif.cpp
src/libcamera/internal/: formats.cpp  formats.h  utils.h  v4l2_pixelformat.cpp  v4l2_pixelformat.h
src/qml/: Main.qml
src/qml/components/: ControlSlider.qml  DockModes.qml  DockedControlListView.qml  DockedListView.qml  IconButton.qml  IconSwitch.qml  ListItem.qml  RoundButton.qml  TextSlider.qml  TextSwitch.qml
src/qml/pages/: CameraUI.qml  GalleryUI.qml  GridOverlay.qml  SettingsOverlay.qml
translations/: harbour-pinhole.ts  harbour-shutter.ts
